[gd_scene load_steps=3 format=3 uid="uid://bnbwu7pkbrwox"]

[ext_resource type="Script" path="res://scenes/ui/mana_ui.gd" id="2_wmp1w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vfw7h"]
load_path = "res://.godot/imported/Mana 3.png-32a5d46f9a4eb20d6a9e6639868e9a50.ctex"

[node name="ManaUI" type="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = -6.0
grow_vertical = 0
scale = Vector2(1.00173, 1)
script = ExtResource("2_wmp1w")

[node name="ManaLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.99655
offset_top = -1.0
offset_right = 79.0034
offset_bottom = 67.0
scale = Vector2(0.271817, 0.294604)
texture = SubResource("CompressedTexture2D_vfw7h")
expand_mode = 1
